fixed spacing for profile on med screen size.

--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,5 +1,5 @@
 #profile__container {
-    width: max(50vw, 1010px, 58%);
+    width: max(50vw, 950px, 58%);
     display: "flex";
     justify-content: "center";
     align-items: "center";
@@ -33,8 +33,8 @@
     background-image: url("../../assets/christy.jpg");
     background-size: cover;
     border-radius: 3px 3px 0 0;
-    height: max(18vw, 340px);
-    width: max(18vw, 340px);
+    height: max(18vw, 300px);
+    width: max(18vw, 300px);
     border-radius: 100%;
 }
 
